--- a/app/src/main/res/layout/item_list_contacts.xml
+++ b/app/src/main/res/layout/item_list_contacts.xml
@@ -108,7 +108,7 @@
             android:layout_width="150dp"
             android:gravity="center_vertical"
             android:layout_alignParentRight="true"
-            android:visibility="visible"
+            android:visibility="gone"
             android:background="@drawable/slide_background"
             android:layout_height="match_parent">
             <Button
