--- a/app/src/main/res/layout/custom_list_dialog.xml
+++ b/app/src/main/res/layout/custom_list_dialog.xml
@@ -6,7 +6,7 @@
     <TextView
         android:id="@+id/tv_dialog_custom_stt_"
         android:text="01"
-        android:textSize="14sp"
+        android:textSize="10sp"
         android:gravity="center"
         android:layout_alignParentLeft="true"
         android:textColor="@android:color/white"
@@ -22,11 +22,12 @@
     <TextView
         android:id="@+id/tv_dialog_custom_date_"
         android:text="01/01/2018"
-        android:textSize="14sp"
+        android:textSize="10sp"
         android:layout_toRightOf="@+id/view_dialog_custom_v1_"
         android:textColor="@android:color/white"
         android:background="#f6bf77"
         android:gravity="center"
+        android:maxLength="10"
         android:layout_width="80dp"
         android:layout_height="match_parent" />
     <TextView
@@ -34,12 +35,13 @@
         android:text="abxjhjhhkhjkgyjg"
         android:maxLines="1"
         android:ellipsize="end"
-        android:textSize="14sp"
+        android:textSize="10sp"
+        android:maxLength="10"
         android:layout_toRightOf="@+id/tv_dialog_custom_date_"
         android:textColor="@android:color/white"
         android:background="#f6bf77"
         android:gravity="center"
-        android:layout_width="100dp"
+        android:layout_width="70dp"
         android:layout_height="match_parent" />
     <View
         android:id="@+id/view_dialog_custom_v2_"
@@ -52,15 +54,15 @@
         android:layout_toRightOf="@+id/view_dialog_custom_v2_"
         android:layout_width="wrap_content"
         android:background="#f6bf77"
-        android:gravity="center"
+        android:gravity="center_vertical"
         android:layout_height="match_parent">
         <Button
             android:id="@+id/btn_dialog_custom_play"
             android:textSize="14sp"
             android:textColor="@android:color/white"
             android:background="@drawable/btn_play"
-            android:layout_marginLeft="10dp"
-            android:gravity="center"
+            android:layout_marginLeft="2dp"
+            android:gravity="center_vertical"
             android:layout_width="15dp"
             android:layout_height="19dp" />
         <TextView
@@ -69,6 +71,7 @@
             android:layout_toRightOf="@+id/btn_dialog_custom_play"
             android:layout_width="wrap_content"
             android:text="play"
+            android:textSize="10sp"
             android:textColor="@android:color/white"
             android:layout_height="wrap_content" />=
 
@@ -78,7 +81,7 @@
         android:id="@+id/btn_download_record"
         android:layout_width="match_parent"
         android:background="#f6bf77"
-        android:gravity="center"
+        android:gravity="center_vertical"
         android:layout_toRightOf="@+id/btn_play_record"
         android:layout_height="match_parent">
         <Button
@@ -96,6 +99,7 @@
             android:layout_toRightOf="@+id/btn_dialog_custom_function_download"
             android:layout_width="wrap_content"
             android:text="download"
+            android:textSize="10sp"
             android:textColor="@android:color/white"
             android:layout_height="wrap_content" />
 
